# starknet-phone

./: .all-contributorsrc  .gitignore  .gitmodules  CNAME  CONTRIBUTING.md  README.md  aosp_bundler.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: book.yml  check.yml  mdbook.yml
beerus_service/: settings.gradle.kts
beerus_service/app/: build.gradle.kts
contracts/: Scarb.toml
docs/: README.md  book.toml
docs/book/: 404.html  intro.html  (+3 more)
examples/: Cargo.toml
light_client_app/: README.md
lightclientservice/: .gitignore  Cargo.toml  Makefile  Pixel-7a-API-34-Android-14_2024-10-13_191116.logcat  README.md  gradle.properties  settings.gradle.kts
lightclientservice/app/: build.gradle.kts
lightclientservice/app/src/androidTest/java/com/example/lightclientservice/: ExampleInstrumentedTest.kt
lightclientservice/app/src/androidTest/java/com/snphone/lightclientservice/: ExampleInstrumentedTest.kt
lightclientservice/app/src/main/: AndroidManifest.xml
lightclientservice/app/src/main/java/com/example/lightclientservice/: Beerus.java  BeerusClient.java  BeerusService.kt
lightclientservice/app/src/main/java/com/snphone/lightclientservice/: BeerusClient.java  BeerusService.kt  MainActivity.kt
lightclientservice/app/src/main/res/layout/: activity_main.xml
lightclientservice/app/src/main/res/values/: strings.xml  themes.xml
lightclientservice/app/src/main/res/values-night/: themes.xml
lightclientservice/app/src/test/java/com/example/lightclientservice/: ExampleUnitTest.kt
lightclientservice/app/src/test/java/com/snphone/lightclientservice/: ExampleUnitTest.kt
lightclientservice/gradle/: libs.versions.toml
lightclientservice/gradle/wrapper/: gradle-wrapper.properties
lightclientservice/src/: android_glue.rs  client.rs  config.rs  eth.rs  lib.rs
snphone-contracts/: .tool-versions  Scarb.toml
wallet-sdk/: build.gradle.kts  settings.gradle.kts
wallet_app/: local.properties  settings.gradle.kts
(+263 files in other folders)
