[package]
description = "Light client for Starknet"
edition = "2021"
name = "beerus"
version = "0.5.0"

[features]
default = ["rpc"]
rpc = ["dep:axum"]

## FOR TESTING ONLY
## skip proof validation of state root is 0x0
skip-zero-root-validation = []

[lib]
# tells rust to compile as a dynamic library which can be used by android
crate-type = ["cdylib"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.81"
reqwest = { version = "0.12.3", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
## Tokio WASM support: https://docs.rs/tokio/latest/tokio/#wasm-support
tokio = { version = "1", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
eyre = "0.6.12"
starknet = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
thiserror = "1.0.63"
axum = { version = "0.7.5", optional = true }
iamgroot = { git = "https://github.com/sergey-melnychuk/iamgroot", tag = "v0.2.8" }
regex = "1.10.6"
once_cell = "1.19.0"

# There is a bug in ethers so we should pin its version
# to the exact version that Helios is using
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "3bf1a9e0d698e9fdfc91d0353878901af5a5c5ef" }
helios = { git = "https://github.com/a16z/helios", rev = "1572a24" }

starknet-crypto = "0.6.2"
blockifier = "0.5.0"
starknet_api = "0.10.0"
cairo-vm = "0.9.3"

base64 = "0.22.0"
flate2 = "1.0.33"
cairo-lang-starknet-classes = "2.6.4"
ureq = { version = "2.10.1", features = ["json"] }
hex = "0.4.3"
bitvec = "1.0.1"
validator = { version = "0.18.1", features = ["derive"] }
url = "2.5.1"
toml = "0.8.19"
clap = { version = "4.5.13", features = ["derive"] }

# for compiling for android
jni = "0.21.1"
jni-sys = "0.4.0"
android_log = "0.1.3"
log = "0.4.22"

[dev-dependencies]
wiremock = "0.6.1"
